cabal-version: 3.0
name: rock-example
version: 0.1.0.0

executable rock-example
  main-is: Main.hs

  build-depends: base ^>=4.14.3.0

  build-depends: dependent-sum-template ^>= 0.1.1.1
  build-depends: hashable ^>= 1.3.0.0
  build-depends: rock ^>= 0.3.1.0
  build-depends: some ^>= 1.0.2

  default-language: Haskell2010
